Bug #14476
Fix the vuln by escaping content for HTML rendering.
Improve the code from the Sonar feedback.